; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_rpi.c_rpi_uninit.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_rpi.c_rpi_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ra_ctx = type { %struct.priv* }
%struct.priv = type { i32, i64 }

@tv_callback = common dso_local global i32 0, align 4
@EGL_NO_CONTEXT = common dso_local global i64 0, align 8
@EGL_NO_DISPLAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ra_ctx*)* @rpi_uninit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rpi_uninit(%struct.ra_ctx* %0) #0 {
  %2 = alloca %struct.ra_ctx*, align 8
  %3 = alloca %struct.priv*, align 8
  store %struct.ra_ctx* %0, %struct.ra_ctx** %2, align 8
  %4 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %5 = getelementptr inbounds %struct.ra_ctx, %struct.ra_ctx* %4, i32 0, i32 0
  %6 = load %struct.priv*, %struct.priv** %5, align 8
  store %struct.priv* %6, %struct.priv** %3, align 8
  %7 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %8 = call i32 @ra_gl_ctx_uninit(%struct.ra_ctx* %7)
  %9 = load i32, i32* @tv_callback, align 4
  %10 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %11 = call i32 @vc_tv_unregister_callback_full(i32 %9, %struct.ra_ctx* %10)
  %12 = load %struct.ra_ctx*, %struct.ra_ctx** %2, align 8
  %13 = call i32 @destroy_dispmanx(%struct.ra_ctx* %12)
  %14 = load %struct.priv*, %struct.priv** %3, align 8
  %15 = getelementptr inbounds %struct.priv, %struct.priv* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %1
  %19 = load %struct.priv*, %struct.priv** %3, align 8
  %20 = getelementptr inbounds %struct.priv, %struct.priv* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.priv*, %struct.priv** %3, align 8
  %23 = getelementptr inbounds %struct.priv, %struct.priv* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @eglDestroyContext(i32 %21, i64 %24)
  br label %26

26:                                               ; preds = %18, %1
  %27 = load i64, i64* @EGL_NO_CONTEXT, align 8
  %28 = load %struct.priv*, %struct.priv** %3, align 8
  %29 = getelementptr inbounds %struct.priv, %struct.priv* %28, i32 0, i32 1
  store i64 %27, i64* %29, align 8
  %30 = call i32 (...) @eglReleaseThread()
  %31 = load i32, i32* @EGL_NO_DISPLAY, align 4
  %32 = load %struct.priv*, %struct.priv** %3, align 8
  %33 = getelementptr inbounds %struct.priv, %struct.priv* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  ret void
}

declare dso_local i32 @ra_gl_ctx_uninit(%struct.ra_ctx*) #1

declare dso_local i32 @vc_tv_unregister_callback_full(i32, %struct.ra_ctx*) #1

declare dso_local i32 @destroy_dispmanx(%struct.ra_ctx*) #1

declare dso_local i32 @eglDestroyContext(i32, i64) #1

declare dso_local i32 @eglReleaseThread(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
